# oreilly_ml

./: README.md  pyproject.toml
http_client/: http_client.py
src/books/chapter_9/portfolio_allocation/: pytorch.ipynb
