[tool.poetry]
name = "oreilly-ml"
version = "0.1.0"
description = ""
authors = ["An Vu Trong <vta.bsn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
lightning = "^2.4.0"
torch = "^2.5.0"
asyncio = "^3.4.3"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"

[tool.poetry.group.dev.dependencies]
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
